[fix] fixed overlaping player cards on rounds overview

--- a/superb_ock/static/superb_ock/css/styles.css
+++ b/superb_ock/static/superb_ock/css/styles.css
@@ -32,3 +32,14 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+@media (max-width: 576px) {
+    .player-data {
+        display: grid !important;
+        grid-template-columns: repeat(auto-fit, minmax(45%, 1fr));
+        gap: 10px;
+    }
+    .player {
+        text-align: center;
+    }
+}
